feat: add xenft submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "projects/XEN-crypto"]
 	path = projects/XEN-crypto
 	url = https://github.com/FairCrypto/XEN-crypto.git
+[submodule "projects/XENFT"]
+	path = projects/XENFT
+	url = https://github.com/FairCrypto/XENFT.git
