--- a/projects/ethereum-tool/package.json
+++ b/projects/ethereum-tool/package.json
@@ -9,5 +9,8 @@
   "dependencies": {
     "ethereumjs-util": "^7.1.5",
     "ethers": "^5.6.9"
+  },
+  "devDependencies": {
+    "keyv": "^4.5.2"
   }
 }
